# cube-crafted

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.h
include/core/: Application.h  Timer.h  Window.h  input.h
include/entities/: Player.h  block.h  camera.h  cubeMesh.h  triangle.h
include/shaders/: shader.h  texture.h
include/ui/: Crosshair.h  Hotbar.h
include/world/: block.h  world.h
src/: config.h  glad.c  main.cpp
src/core/: Application.cpp  Timer.cpp  Window.cpp  input.cpp
src/entities/: Player.cpp  block.cpp  camera.cpp  cubeMesh.cpp  triangle.cpp
src/graphics/: fragment.glsl  shader.cpp  texture.cpp  vertex.glsl
src/graphics/gui_shaders/: crosshair_Fragment.glsl  crosshair_Vertex.glsl
src/ui/: Crosshair.cpp
src/world/: block.cpp  world.cpp  world.h
